Created ID for log and sign

--- a/src/html/log_in.html
+++ b/src/html/log_in.html
@@ -13,9 +13,9 @@
     <!-- Login Form -->
     <div class="form-box">
         <h2>Login</h2>
-        <form>
-            <input type="text" placeholder="Username" required>
-            <input type="password" placeholder="Password" required>
+        <form id="regForm">
+            <input type="text" id="logUsername" placeholder="Username" required>
+            <input type="password" id="logPassword" placeholder="Password" required>
 
             <div class="remember">
                 <input type="checkbox" id="remember">
