--- a/src/html/sign_up.html
+++ b/src/html/sign_up.html
@@ -14,9 +14,9 @@
     <div class="form-box">
         <h2>Sign up</h2>
         <form>
-            <input type="text" placeholder="Username" required>
-            <input type="password" placeholder="Password" required>
-            <input type="password" placeholder="Confirm Password" required>
+            <input type="text" id="regUsername" placeholder="Username" required>
+            <input type="password" id="regPassword" placeholder="Password" required>
+            <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
 
             
 
