--- a/src/html/landingpage.html
+++ b/src/html/landingpage.html
@@ -9,12 +9,17 @@
 <body>
 
     <header>
-        <div class="logo-container">
-            <span class="hand-icon">✋</span>
-            <span class="logo-text">FlexiHand</span>
-        </div>
-        <button id="logoutBtn" class="btn-logout">Log Out</button>
-    </header>
+    <div class="logo-container">
+        <span class="hand-icon">✋</span>
+        <span class="logo-text">FlexiHand</span>
+    </div>
+
+    <div class="auth-buttons">
+        <button id="loginBtn" class="btn-logout">Log in</button>
+        <button id="signupBtn" class="btn-logout">Sign up</button>
+        <button id="logoutBtn" class="btn-logout">Log out</button>
+    </div>
+</header>
 
     <main class="content">
         <section class="hero-section">
