--- a/log_in.html
+++ b/log_in.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login & Sign Up</title>
-    <link rel="stylesheet" href="../css/log_in.css">
+    <link rel="stylesheet" href="src/css/log_in.css">
 </head>
 <body>
 
