--- a/log_in.html
+++ b/log_in.html
@@ -13,8 +13,8 @@
     <!-- Login Form -->
     <div class="form-box">
         <h2>Login</h2>
-        <form id="regForm">
-            <input type="text" id="logUsername" placeholder="Username" required>
+        <form id="loginForm">
+            <input type="email" id="logUsername" placeholder="Email" required>
             <input type="password" id="logPassword" placeholder="Password" required>
 
             <div class="remember">
@@ -26,7 +26,7 @@
         </form>
     </div>
 
-    <script type="module" src="../js/main.js"></script>
+    <script type="module" src="firebase/main.js"></script>
 
 </body>
 </html>
