--- a/sign_up.html
+++ b/sign_up.html
@@ -13,8 +13,8 @@
     <!-- Login Form -->
     <div class="form-box">
         <h2>Sign up</h2>
-        <form>
-            <input type="text" id="regUsername" placeholder="Username" required>
+        <form id="regForm">
+            <input type="email" id="regUsername" placeholder="Email" required>
             <input type="password" id="regPassword" placeholder="Password" required>
             <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
 
@@ -24,7 +24,7 @@
         </form>
     </div>
 
-   <script type="module" src="../js/main.js"></script>
+   <script type="module" src="firebase/main.js"></script>
 
 </body>
 </html>
