--- a/log_in.html
+++ b/log_in.html
@@ -26,7 +26,7 @@
         </form>
     </div>
 
-    <script type="module" src="firebase/main.js"></script>
+    <script type="module" src="/firebase/main.js"></script>
 
 </body>
 </html>
