--- a/sign_up.html
+++ b/sign_up.html
@@ -24,7 +24,7 @@
         </form>
     </div>
 
-   <script type="module" src="firebase/main.js"></script>
+   <script type="module" src="/firebase/main.js"></script>
 
 </body>
 </html>
