--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SignLingo – Profile</title>
+    <title>Flexihand – Profile</title>
     <link rel="stylesheet" href="../css/profile.css">
 </head>
 <body>
 
 <nav>
-    <div class="logo">🧏‍♀️ SignLingo</div>
+    <div class="logo">🧏‍♀️ Flexihand</div>
     <div class="nav-links">
         <a href="#">Learn</a>
         <a href="#">Progress</a>
