--- a/src/html/evaluate.html
+++ b/src/html/evaluate.html
@@ -13,6 +13,7 @@
         <a href="#" class="nav-item active">Evaluate</a>
         <a href="#" class="nav-item">Progress</a>
         <a href="#" class="nav-item">Profile</a>
+        <button class="btn-settings" id="settingsBtn">⚙️</button>
     </div>
 </nav>
 
