--- a/src/html/progress.html
+++ b/src/html/progress.html
@@ -11,10 +11,11 @@
     <nav>
         <div class="logo">🌊 FlexiHand</div>
         <div class="nav-links">
-            <a href="#" class="nav-item">Evaluate</a>
-            <a href="#" class="nav-item active">Progress</a>
-            <a href="#" class="nav-item">Profile</a>
-        </div>
+    <a href="#" class="nav-item">Evaluate</a>
+    <a href="#" class="nav-item active">Progress</a>
+    <a href="#" class="nav-item">Profile</a>
+    <a href="#" class="nav-item" id="settingsBtn">⚙️</a> <!-- New Settings Button -->
+</div>
     </nav>
 
     <div class="container">
