Adding updated settings web page files

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -36,7 +36,7 @@
         
                     <div class="field">
                         <label>Password</label>
-                        <input type="password" name="password">
+                        <input type="password" name="password" value="**********">
                     </div>
                 </div>
             </section>
@@ -45,11 +45,11 @@
                 <h3>Learning Preferences</h3>
                 <div class="input-card">
                     <label>Daily Goal</label>
-                    <select name="dailyGoal">
+                    <select name="dailyGoal" value="Chose an option">
                         <option value="0">Choose an option</option>
-                        <option value="1">Casual</option>
-                        <option value="3">Regular</option>
-                        <option value="5">Serious</option>
+                        <option value="1">Once a day</option>
+                        <option value="2">Twice a day</option>
+                        <option value="3">Thrice a day</option>
                     </select>
         
                     <label>Reminder Time</label>
