Got the canvas to finally fucking work

--- a/src/js/reference.html
+++ b/src/js/reference.html
@@ -5,10 +5,30 @@
     <title>Record Reference Gestures</title>
     <style>
         #webcam, #output {
-          transform: scaleX(-1); /* flip horizontally */
+          position: absolute;       /* overlay them */
+          top: 50px;                /* adjust based on your layout */
+          left: 50px;               /* adjust based on your layout */
+          width: 640px;
+          height: 480px;
+          transform: scaleX(-1);    /* flip horizontally so landmarks align */
+        }
+      
+        #output {
+          pointer-events: none;     /* so clicks pass through to buttons */
+        }
+      
+        body {
+          position: relative;       /* required for absolute positioning */
+        }
+
+        #webcam, #output {
+            position: absolute;
+            top: 50px;
+            left: 50px;
         }
       </style>
 </head>
+
 <body>
     <h1>Record Reference Hand Landmarks</h1>
 
