--- a/log_in.html
+++ b/log_in.html
@@ -21,8 +21,11 @@
                 <input type="checkbox" id="remember">
                 <label for="remember">Remember me</label>
             </div>
-
             <button type="submit">Login</button>
+
+            <p class="forgot-password">
+            <a href="/src/html/forgotpassword.html">Forgot Password?</a>
+            </p>
         </form>
     </div>
 
