--- a/src/html/forgotpassword.html
+++ b/src/html/forgotpassword.html
@@ -10,17 +10,18 @@
     <div class="forgot-container">
         <div class="forgot-card">
             <h1>Forgot Password</h1>
-            <p>Enter your email address below and we'll send you a link to reset your password.</p>
+            <p>Enter your email address below to receive the link to password reset.</p>
             
             <form id="forgotForm">
-                <input type="email" placeholder="Email Address" required>
+                <input type="email" id="resetEmail" placeholder="Email Address" required>
                 <button type="submit">Send Reset Link</button>
             </form>
-
+            <p id="resetMessage" style="color:red;"></p>
             <p class="back-login">
-                Remember your password? <a href="log_in.html">Login</a>
+                Remember your password? <a href="/src/html/log_in.html">Login</a>
             </p>
         </div>
     </div>
+    <script type="module" src="/src/js/forgotpassword.js"></script>
 </body>
 </html>
