navigation between pages done

--- a/src/html/evaluate.html
+++ b/src/html/evaluate.html
@@ -11,9 +11,10 @@
     <nav>
     <div class="logo">🌊 FlexiHand</div>
     <div class="nav-links">
-        <a href="#" class="nav-item active">Evaluate</a>
-        <a href="#" class="nav-item">Progress</a>
-        <a href="#" class="nav-item">Profile</a>
+        <a href="evaluate.html" class="nav-item">Evaluate</a>
+        <a href="progress.html" class="nav-item active">Progress</a>
+        <a href="profile.html" class="nav-item">Profile</a>
+        <a href="settings.html" class="nav-item">⚙️</a>
         <button class="btn-settings" id="settingsBtn">⚙️</button>
     </div>
 </nav>
