--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -11,9 +11,10 @@
     <div class="logo">🌊 FlexiHand</div>
 
     <div class="nav-right">
-        <a href="#">Evaluate</a>
-        <a href="#">Progress</a>
-        <a href="#" class="active">Profile</a>
+         <a href="evaluate.html" class="nav-item">Evaluate</a>
+        <a href="progress.html" class="nav-item active">Progress</a>
+        <a href="profile.html" class="nav-item">Profile</a>
+        <a href="settings.html" class="nav-item">⚙️</a>
         <button id="logoutBtn">⚙️</button>
     </div>
 </nav>
