--- a/src/html/progress.html
+++ b/src/html/progress.html
@@ -57,6 +57,20 @@
             </div>
         </div>
     </div>
+
+    <!-- Exercise Recommendations -->
+    <div id="recommendationsSection" class="recommendations-section" style="display: none;">
+        <h2>Recommended Exercises</h2>
+        <p class="recommendations-subtitle">Based on your latest evaluation, here are exercises to improve your hand mobility.</p>
+        <div id="recommendationsList" class="recommendations-list">
+            <!-- Cards inserted by JS -->
+        </div>
+    </div>
+
+    <div id="noRecommendations" class="no-recommendations" style="display: none;">
+        <h2>Recommended Exercises</h2>
+        <p>Great job! You scored 85% or above on all tests. Keep up the good work!</p>
+    </div>
 </div>
 
 <!-- Correct relative JS path -->
