Fixed up styling. Activated stop flexing button.

--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -10,12 +10,11 @@
 <nav>
     <div class="logo">🌊 FlexiHand</div>
 
-    <div class="nav-right">
-         <a href="evaluate.html" class="nav-item">Evaluate</a>
-        <a href="progress.html" class="nav-item active">Progress</a>
-        <a href="profile.html" class="nav-item">Profile</a>
+    <div class="nav-links">
+        <a href="evaluate.html" class="nav-item">Evaluate</a>
+        <a href="progress.html" class="nav-item">Progress</a>
+        <a href="profile.html" class="nav-item active">Profile</a>
         <a href="settings.html" class="nav-item">⚙️</a>
-        <button id="logoutBtn">⚙️</button>
     </div>
 </nav>
 
