--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -9,12 +9,11 @@
 <body>
     <nav class="navbar">
         <div class="logo">🌊 FlexiHand</div>
-        <div class="nav-right">
+        <div class="nav-links">
         <a href="evaluate.html" class="nav-item">Evaluate</a>
-        <a href="progress.html" class="nav-item active">Progress</a>
+        <a href="progress.html" class="nav-item">Progress</a>
         <a href="profile.html" class="nav-item">Profile</a>
-        <a href="settings.html" class="nav-item">⚙️</a>
-            <button id="logoutBtn">⚙️</button>
+        <a href="settings.html" class="nav-item active">⚙️</a>
         </div>
     </nav>
 
