Cleaning up css

--- a/index.html
+++ b/index.html
@@ -12,52 +12,46 @@
 
 <header>
     <div class="logo-container">
-        <span class="hand-icon">✋</span>
+        <span class="hand-icon">🌊</span>
         <span class="logo-text">FlexiHand</span>
     </div>
 
     <div class="auth-buttons">
         <button id="loginBtn" class="btn-logout">Log in</button>
         <button id="signupBtn" class="btn-logout">Sign up</button>
-        <button id="logoutBtn" class="btn-logout">Log out</button>
     </div>
 </header>
 
 <main class="content">
     <section class="hero-section">
-        <h1>Learn about your hand flexibility doing simple exercise</h1>
+        <h1>Learn about your hand flexibility by doing simple exercises</h1>
         <h4>
             Join thousands of people learning about the flexibility of their hands.
             <span class="disclaimer">
-                For educational purposes only, visit professional for expert advice.
+                For educational purposes only, please visit a doctor for medical advice.
             </span>
         </h4>
 
-        <div class="hero-buttons">
-            <button class="btn-primary">Start Learning Now</button>
-            <button class="btn-secondary">Learn More</button>
+        <div class="auth-buttons">
+            <button id="signupBtn" class="btn-logout">Start Learning Now</button>
         </div>
     </section>
 
     <section class="card-grid">
         <div class="card card-dark-blue" id="lessonsCard">
-            <div class="icon">📚</div>
             <h3>Interactive Lessons</h3>
         </div>
 
         <div class="card card-green" id="progressCard">
-            <div class="icon">🎯</div>
             <h3>Progress Tracking</h3>
         </div>
 
         <div class="card card-light-blue" id="aiCard">
-            <div class="icon">🤖</div>
             <h3>AI Recognition</h3>
         </div>
     </section>
 </main>
 
-<!-- Fixed JS path + module -->
 <script type="module" src="/src/js/index.js"></script>
 
 </body>
