--- a/src/html/progress.html
+++ b/src/html/progress.html
@@ -29,7 +29,6 @@
         <div class="card">
             <div class="card-header">
                 <h3>This Week</h3>
-                <button class="btn-flex-sm" id="flexBtn">Start Flexing</button>
             </div>
 
             <div id="cameraContainer" class="camera-box" style="display: none;">
@@ -75,6 +74,7 @@
 
 <!-- Correct relative JS path -->
 <script type="module" src="../js/progress.js"></script>
+<script type ="module" src="../js/landingpage.js"></script>
 
 </body>
 </html>
