--- a/src/html/progress.html
+++ b/src/html/progress.html
@@ -25,42 +25,11 @@
 <div class="container">
     <h1>Your Progress</h1>
 
-    <div class="dashboard-grid">
-        <div class="card">
-            <div class="card-header">
-                <h3>This Week</h3>
-            </div>
-
-            <div id="cameraContainer" class="camera-box" style="display: none;">
-                <video id="webcam" autoplay playsinline></video>
-                <div class="scanning-line"></div>
-            </div>
-
-            <div class="chart-container" id="activityChart">
-                <!-- Chart will be inserted by JS -->
-            </div>
-
-            <p class="chart-label">Minutes practiced per day</p>
-        </div>
-
-        <div class="card center">
-            <h3>Total Progress</h3>
-
-            <div class="circle-progress">
-                <span id="totalPercent">0%</span>
-                <small>Complete</small>
-            </div>
-
-            <div class="progress-bar-container">
-                <div class="progress-fill" id="challengeProgress"></div>
-            </div>
-        </div>
-    </div>
-
     <!-- Exercise Recommendations -->
-    <div id="recommendationsSection" class="recommendations-section" style="display: none;">
+    <div id="recommendationsSection" class="recommendations-section" style="display: none;">         <div id="white">
+
         <h2>Recommended Exercises</h2>
-        <p class="recommendations-subtitle">Based on your latest evaluation, here are exercises to improve your hand mobility.</p>
+        <p class="recommendations-subtitle">Based on your latest evaluation, here are exercises to improve your hand mobility.</p> </div>
         <div id="recommendationsList" class="recommendations-list">
             <!-- Cards inserted by JS -->
         </div>
