max 6 char for pass

--- a/log_in.html
+++ b/log_in.html
@@ -16,6 +16,7 @@
         <form id="loginForm">
             <input type="email" id="logUsername" placeholder="Email" required>
             <input type="password" id="logPassword" placeholder="Password" required>
+            <h4>Minimum six characters</h4>
             <p id="logError" style="color: red;"></p>
             <div class="remember">
                 <input type="checkbox" id="remember">
