--- a/sign_up.html
+++ b/sign_up.html
@@ -17,6 +17,7 @@
             <input type="email" id="regUsername" placeholder="Email" required>
             <input type="password" id="regPassword" placeholder="Password" required>
             <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+            <p id="errorMessage" style="color: red;"></p>
             <h4>Minimum six characters</h4>
 
             
